# pjt-ditto-agent-hs

./: Makefile  README.md  pyproject.toml
src/agent/: components.py  model.py  persona.json
src/agent/conv/: conv_components.py  conv_workflow.py
